maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:10: error: not found: value gauchev
else {gauchev=v+1;}
      ^